Fixed spacing issues after changing fonts

--- a/less/navbar.less
+++ b/less/navbar.less
@@ -1,19 +1,19 @@
 .nav {
 	height: 24px;
 	padding: 11px 0 15px;
-    box-shadow: 0px 2px 3px @shadow;
-    outline: 0;
+	box-shadow: 0px 2px 3px @shadow;
+	outline: 0;
 }
 
 .nav a {
-	padding: 0.3ex 1.5em; 
+	padding: 0.5ex 1.5em; 
 	position: relative;
 	top: -0.1ex;
-	margin-bottom: 0.2em;
-    color: black;
-    border-bottom: 3px solid transparent;
+	margin-bottom: 3px;
+	color: black;
+	border-bottom: 3px solid transparent;
     
-    &:hover { border-color: @blueish; }
+	&:hover { border-color: @blueish; }
     
     &.current { border-color: @reddish; }
 }
@@ -65,7 +65,7 @@
 	}
 	.nav a {
 		display: block;
-        width: 33%;
+       width: 33%;
 		
 	}
 }
